--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.3
 google-api-core==1.17.0
 google-api-python-client==1.8.4
 google-auth==1.16.0
@@ -23,6 +24,7 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
 six==1.15.0
+SQLAlchemy==1.3.17
 uritemplate==3.0.1
 urllib3==1.25.9
 Werkzeug==1.0.1
