--- a/caerus.conf
+++ b/caerus.conf
@@ -1,6 +1,8 @@
 <VirtualHost *:80>
 
              ServerName caerus.solonedu.com
+             WSGIDaemonProcess caerus python-path=/var/www/caerus:/var/www/caerus/em/lib/python3.6/site-packages
+             WSGIProcessGroup caerus
              
              WSGIScriptAlias / /var/www/caerus/caerus.wsgi
              <Directory /var/www/caerus/caerus/>
